# readmai-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/readmai/: cli.py
src/readmai/ai/: __init__.py  gemini.py  openai.py  provider.py
src/readmai/config/: manager.py
src/readmai/generator/: __init__.py  readme.py
src/readmai/scanner/: __init__.py  project.py
src/readmai/utils/: markdown.py
