[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readmai-cli"
version = "0.1.0"
authors = [
  { name="João Pedro Leopoldino", email="leopoldinodev@gmail.com" },
]
description = "A CLI tool to generate README files for projects using Gemini AI."
readme = "README.md" # We'll generate this later
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Choose your license
    "Operating System :: OS Independent",
]
dependencies = [
    "google-generativeai",
    "halo",
    "openai>=1.0.0"
]

[project.scripts]
readmai = "readmai.cli:main"

[project.urls]
"Homepage" = "https://github.com/JPLeopoldino/readmai-cli"
"Bug Tracker" = "https://github.com/JPLeopoldino/readmai-cli/issues"
